# bevy_fps

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: command.rs  main.rs  net.rs
server/: Cargo.toml
server/src/: main.rs  net.rs  replay.rs
shared/: Cargo.toml
shared/src/: consts.rs  interpolate.rs  lib.rs  plugins.rs
shared/src/pawns/: fly.rs  fps.rs  mod.rs
shared/src/scenes/: example.rs
shared/src/session/: mod.rs
