[workspace]
resolver = "3"
members = ["client", "server", "shared"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[workspace.dependencies]
bevy = { version = "0.16.0", features = ["wayland", "dynamic_linking"] }
bevy_rapier3d = { version = "0.30.0", features = ["debug-render-3d", "enhanced-determinism", "serde-serialize"] }
bevy_renet = { version = "1.0.0" }
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
