[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
shared = { path = "../shared" }
bevy.workspace = true
bincode.workspace = true
serde.workspace = true
bevy_quinnet = { version = "0.17.0", default-features = false, features = ["server", "shared-client-id"] }
